# embydb

./: .gitignore  CMakeLists.txt
include/buffer/: clock_replacer.h
include/common/: config.h
include/storage/disk/: disk_manager.h
include/storage/page/: page.h
src/: main.cpp
src/buffer/: clock_replacer.cpp
src/disk/: disk_manager.cpp
test/disk/: disk_manager_test.cpp
